--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,10 @@ description: > # this means to ignore newlines until "baseurl:"
   to programming and random other musings here.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://blog.brianjohn.com" # the base hostname & protocol for your site
-twitter_username: brianpjohn
+facebook_username: brianjohn
 github_username:  f1sherman
+linkedin_username: brianjohn
+twitter_username: brianpjohn
 
 # Build settings
 markdown: kramdown
